samples/_failures_safe/1761264982_bc567b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10bebb35.c: In function ‘main’:
./samples/SAFE/__tmp_10bebb35.c:128:5: error: expected declaration or statement at end of input
  128 |     printf("\nError rate: %.2f%%\n", error_rate);
      |     ^~~~~~
